show friend pro page
